fix #37643: Overtime pattern not visible on dark colors in MyTime week view again in IE

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -55,6 +55,12 @@
 .overtime {
 	padding-top: 30px;
 }
+.overtime-background-image-dark {
+	background: linear-gradient(45deg, transparent, transparent 4px, rgba(0, 0, 0, .5) 6px, transparent 10px, transparent);
+}
+.overtime-background-image-light {
+	background: linear-gradient(45deg, transparent, transparent 4px, rgba(255, 255, 255, .5) 6px, transparent 10px, transparent);
+}
 .dayoff
 {
 	background-color: beige;
